css/src/_content-heading-image.scss
.content-heading-image {
	position: relative;
	max-height: 500px;
	overflow: hidden;

	& > img {
		height: 100%;
	}

	.logo-wrap {
		@include xy-grid;

		justify-content: center;
		align-content: center;
		position: absolute;
		top: 0;
		z-index: 2;
		width: 100%;
		height: 100%;
	}

	h1 {
		@include template-prop($p: background-color, $key: color, $pref-key: header-bg-color);

		margin: 0;
		max-width: 80%;
		padding: 5% 7%;
	}

	@include breakpoint(medium) {
		max-height: 336px;

		h1 {
			padding: rem-calc(30 54);
		}
	}
}

